# aircraft_preliminary_design

./: .gitignore  README.md  __init__.py  __main__.py  config.py  generate_structure.py  project_structure.txt  pyproject.toml  requirements.txt  run_app.py
core/: __init__.py  aircraft_constants.py  block_geometry.py  block_mass_estimation.py  block_preliminary_sizing.py  calculation_engine.py  constants.py  data_models.py  exceptions.py  file_io.py  statistics_database.py
core/blocks/: __init__.py  base_block.py  block_01_landing.py  block_02_takeoff.py  block_03_climb.py  block_04_cruise_climb.py  block_05_missed_approach.py  block_06_aero_analysis.py  block_07_missed_approach_tw.py  block_08_matching_chart.py  block_09_mass_calculation.py  block_10_final_parameters.py  block_11_geometry.py
examples/: input_schema.json
examples/inputs/: AN14.json  AN14_mass_refactor.json  example_01.json  generated_template.json  (+1 more)
inputs/: example_input1.txt  example_input2.txt  example_input3.txt  example_input4.txt
outputs/: AN14_result.txt  AN14_trace.md  before_formula_rework_trace.md  геометрия.txt  результаты.txt  результаты1.txt
scripts/: README_windows_exe.md  build_windows_exe.bat  build_windows_exe.ps1  smoke_windows_exe.ps1
tests/: test_app_smoke.py  test_calculation_trace.py  test_input_builder.py  test_input_schema.py  test_json_writer.py  test_main_window_import.py  test_mass_components.py  test_project_input_export.py  test_trace_writer.py  test_txt_writer.py  test_ui_adapter.py  test_ui_components_import.py
ui/: __init__.py  main_window.py
(+34 files in other folders)
