[project]
name = "aircraft-preliminary-design"
version = "0.1.0"
description = "Aircraft preliminary design calculation tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "PySide6>=6.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[project.scripts]
aircraft-design = "aircraft_design.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"